--- a/public/css/news.css
+++ b/public/css/news.css
@@ -120,6 +120,8 @@
   position: relative;
   flex: 1;
   min-height: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .news-feed-wrapper::after {
